--- a/src/vigilo/themes/templates/vigiboard/plugins/hls.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/hls.html
@@ -2,7 +2,7 @@
       xmlns:xi="http://www.w3.org/2001/XInclude"
       py:strip="">
 
-<th id="plugin_${name}" class="plugin_${name}" py:def="hls_header(name, instance)"
+<th id="plugin_${name}" class="plugin_${name}" py:def="hls_header(name, instance, sort, order)"
     title="Impacted High-Level Services">Impacted HLS</th>
 
 <td class="plugin_${name}" py:def="hls_data(name, instance, data, plugin_data)">
