--- a/src/vigilo/themes/templates/vigiboard/plugins/date.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/date.html
@@ -2,9 +2,19 @@
       xmlns:xi="http://www.w3.org/2001/XInclude"
       py:strip="">
 
-<th id="plugin_${name}" class="plugin_${name}" py:def="date_header(name, instance)">
-    Date<br />
-    [Duration]
+<th id="plugin_${name}" class="plugin_${name}" py:def="date_header(name, instance, sort, order)">
+    <py:with vars="next_order=(sort != name) and 'asc' or {'asc': 'desc', 'desc': 'asc'}[order]">
+        <a id="sortLink" title="${{
+                'asc': l_('Sort by %s in ascending order'),
+                'desc': l_('Sort by %s in descending order'),
+            }[next_order] % l_('Last occurrence').lower()}"
+            href="${tg.url('/', params=fixed_search, sort=name, order=next_order, page=page.page)}">
+            Last occurrence
+            <img src="${tg.url('/images/' + order + '.gif')}" py:if="sort == name"/>
+        </a>
+        <br/>
+        [Duration since 1st occurrence]
+    </py:with>
 </th>
 
 <py:def function="date_data(name, instance, data, plugin_data)">
