--- a/src/vigilo/themes/templates/vigiboard/plugins/details.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/details.html
@@ -2,7 +2,7 @@
       xmlns:xi="http://www.w3.org/2001/XInclude"
       py:strip="">
 
-<th id="plugin_${name}" class="plugin_${name}" py:def="details_header(name, instance)"></th>
+<th id="plugin_${name}" class="plugin_${name}" py:def="details_header(name, instance, sort, order)"></th>
 
 <td class="plugin_${name}" py:def="details_data(name, instance, data, plugin_data)">
 <a href="#${data['id']}" class="Details_Link">
