--- a/src/vigilo/themes/templates/vigiboard/plugins/id.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/id.html
@@ -2,7 +2,7 @@
       xmlns:xi="http://www.w3.org/2001/XInclude"
       py:strip="">
 
-<th id="plugin_${name}" py:def="id_header(name, instance)">
+<th id="plugin_${name}" py:def="id_header(name, instance, sort, order)">
 ID
 </th>
 
