--- a/src/vigilo/themes/templates/vigiboard/plugins/priority.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/priority.html
@@ -2,7 +2,18 @@
       xmlns:xi="http://www.w3.org/2001/XInclude"
       py:strip="">
 
-<th id="plugin_${name}" class="plugin_${name}" py:def="priority_header(name, instance)" title="ITIL Priority">Priority</th>
+<th id="plugin_${name}" class="plugin_${name}" py:def="priority_header(name, instance, sort, order)" title="ITIL Priority">
+    <py:with vars="next_order=(sort != name) and 'asc' or {'asc': 'desc', 'desc': 'asc'}[order]">
+        <a id="sortLink" title="${{
+                'asc': l_('Sort by %s in ascending order'),
+                'desc': l_('Sort by %s in descending order'),
+            }[next_order] % l_('Priority').lower()}"
+            href="${tg.url('/', params=fixed_search, sort=name, order=next_order, page=page.page)}">
+            Priority
+            <img src="${tg.url('/images/' + order + '.gif')}" py:if="sort == name"/>
+        </a>
+    </py:with>
+</th>
 
 <py:def function="priority_data(name, instance, data, plugin_data)">
     <td class="plugin_${name} ${data['state']}">${data['priority']}</td>
