--- a/src/vigilo/themes/public/vigiboard/css/night.css
+++ b/src/vigilo/themes/public/vigiboard/css/night.css
@@ -1,5 +1,14 @@
 body {
+    line-height: 0px;
     background-color: rgb(156, 102, 31);
+}
+
+#DetailsDialog {
+    line-height: 1.2em;
+}
+
+.main_content {
+    line-height: 1.2em;
 }
 
 #header {
@@ -47,17 +56,21 @@ a {
 
 #flash .ok {
     background: #d8ecd8 url(../images/ok.png) no-repeat scroll 0px center;
+    line-height: 1.2em;
 }
 #flash .warning {
     background: #fff483 url(../images/warning.png) no-repeat scroll 0px center;
+    line-height: 1.2em;
 }
 #flash .error {
     background: #f9c5c1 url(../images/error.png) no-repeat scroll 0px center;
+    line-height: 1.2em;
 }
 #flash .alert,
 #flash .info,
 .notice {
     background: #EEEEFF url(../images/info.png) no-repeat scroll 0px center;
+    line-height: 1.2em;
 }
 
 .fielderror {
