Correction typo commit précédent.
Change-Id: I3d40a14792e5d59b0df02a6ac4bb6f2b893b11ce
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1309
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/templates/vigiboard/history_table.html
+++ b/src/vigilo/themes/templates/vigiboard/history_table.html
@@ -132,8 +132,7 @@
 			</tr>
 
 	        <tr py:when="0" py:for="(index, entry) in enumerate(page.items)" class="${['odd', 'even'][index % 2]}">
-				<py:with vars="locale = Locale.negotiate(get_lang() or ['en'], g
-et_locales('vigiboard'), sep='-')">
+				<py:with vars="locale = Locale.negotiate(get_lang() or ['en'], get_locales('vigiboard'), sep='-')">
 				<td class="plugin_date ${entry.state is not None and StateName.value_to_statename(entry.state) or ''}">
 					${entry.get_date('timestamp', locale)}
 					<br />
