--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -64,9 +64,13 @@ h1 a:hover {
 /* Table des évènements */
 
 .vigitable {
-    margin: auto;
+    /* Pour que le tableau garde sa position meme si la taille des 'fonts' change */
+    position: absolute;
+    margin: auto 10px auto 10px;
     width: 99%;
     border-collapse: separate;
+    /* Pour que le tableau apparaisse au second plan si des popups doivent s'afficher */
+    z-index: -1;
 }
 
 .vigitable .navigation_arrow * {
