Inhibition des alertes (#1187).
Refs: #1187
Change-Id: I87a9c86eb2ecd344b31e092d9dbd645d79ea4cba
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1293
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -18,7 +18,7 @@
 
 h1 {
     font-size: 110%;
-    margin: 0 0.2em 0 -58px;
+    margin: 7px 0.2em 0 -58px;
     font-family: sans-serif;
     text-shadow: 0.1em 0.1em 0.2em #ccc;
 }
