--- a/src/vigilo/themes/templates/vigiboard/toolbar.html
+++ b/src/vigilo/themes/templates/vigiboard/toolbar.html
@@ -15,6 +15,9 @@
         <a href="${tg.url('/index.csv?%s') % tg.request.query_string}">
             <img src="${tg.url('/images/document-export.png')}" alt="Export CSV" title="Export CSV" />
         </a>
+        <a href="${tg.url('/silence')}">
+            <img src="${tg.url('/images/silence.png')}" alt="Silence rules" title="Silence rules" />
+        </a>
         <a href="${tg.url('/')}">
             <img src="${tg.url('/images/home.png')}" alt="Home" title="Home" />
         </a>
