Grille et positions dans VigiMap.
Affiche la position en cours de manipulation dans VigiMap en mode
édition. Ce changement ajoute également un mode "grille" au mode édition
(avec un pas de 10px sur les 2 axes).
Ces 2 ajouts permettent un placement "au pixel près" des éléments.

Change-Id: If5fae17341529a82a43406e8cb159d9a6d8ed152
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1399
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/public/vigimap/css/edition.css
+++ b/src/vigilo/themes/public/vigimap/css/edition.css
@@ -31,3 +31,11 @@ label.required {
     float: right;
 }
 
+.position {
+    color: red;
+    float: left;
+    position: absolute;
+    background-color: white;
+    z-index: 5;
+    padding: 2px;
+}
