URL avec / pour la mise en silence.
Sans ce slash, le lien (relatif) vers la confirmation de la suppression
d'une règle de mise en silence est erroné.

Change-Id: I854e2d51f8727b1ff4a7b67ad0df5004f5d16079
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1415
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/templates/vigiboard/toolbar.html
+++ b/src/vigilo/themes/templates/vigiboard/toolbar.html
@@ -15,7 +15,7 @@
         <a href="${tg.url('/index.csv?%s') % tg.request.query_string}">
             <img src="${tg.url('/images/document-export.png')}" alt="Export CSV" title="Export CSV" />
         </a>
-        <a href="${tg.url('/silence')}">
+        <a href="${tg.url('/silence/')}">
             <img src="${tg.url('/images/silence.png')}" alt="Silence rules" title="Silence rules" />
         </a>
         <a href="${tg.url('/')}">
