Mauvaise "traduction" des alt="".
Evite que les alt="" soient "traduits" dans les templates.
D'autant plus important que dans le cas présent, la "traduction"
correspond aux méta-données du catalogue des traductions.

Change-Id: Ifd275ab414b0c9708e6fe68adba907e439238e5e
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1444
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/templates/vigigraph/graphslist.html
+++ b/src/vigilo/themes/templates/vigigraph/graphslist.html
@@ -30,7 +30,7 @@
                 start=graph['start'],
                 duration=graph['duration'],
                 nocache=graph['nocache'],
-            )}" border="0" alt=""></img>
+            )}" border="0" alt="${''}"></img>
         </li>
     </ul>
 </div>
