--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -57,7 +57,7 @@
     <div id="header">
         <span id="logo">
             <a href="${tg.url(tg.config.get('logo_link', '/'))}">
-                <img alt="" src="${tg.url('/images/vigilo.png')}"/>
+                <img alt="${''}" src="${tg.url('/images/vigilo.png')}"/>
             </a>
         </span>
 
