[#1252] Nom complet et identifiant dans les IHMs.
Affiche le nom complet et l'identifiant de l'utilisateur connecté dans
les IHMs lorsque les modèles HTML de !TurboGears sont utilisés.
Le nouvel affichage est de la forme : "Nom Complet (identifiant)".

Change-Id: Ic99ff9675f93cc145f3dd22f3598575ca189a0b3
Refs: #1252.
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1454
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Thomas BURGUIERE <thomas.burguiere@c-s.fr>

--- a/src/vigilo/themes/templates/vigiboard/master.html
+++ b/src/vigilo/themes/templates/vigiboard/master.html
@@ -24,7 +24,7 @@
         <li py:if="not request.identity" class="loginlogout"><a href="${tg.url('/login')}">Login</a></li>
         <li py:if="request.identity" class="loginlogout"><a href="${tg.url('/logout_handler')}">Logout</a></li>
     </span>
-    <li id="userinfo" py:if="request.identity">Logged in as: <span>${request.identity['repoze.who.userid']}</span></li>
+    <li id="userinfo" py:if="request.identity">Logged in as: <span>${request.identity['user'].fullname} (${request.identity['repoze.who.userid']})</span></li>
   </ul>
   <div id="content">
     <py:with vars="flash=tg.flash_obj.render('flash', use_js=False)">
