--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -4,6 +4,8 @@
     background-color: #f1f1f1;
     margin: 0;
     padding: 0.1em 0;
+    width: 100%;
+    position: fixed;
 }
 
 #header a {
@@ -59,6 +61,8 @@ h1 a:hover {
 #menu {
     width: 100%;
     display: block;
+    position: fixed;
+    top: 24px; /* Correspond à la taille de l'en-tête. */
 }
 
 #map {
