[#1254] Colonne d'état dans VigiBoard.
Enrichi la colonne de détails dans VigiBoard pour permettre le tri et le
filtrage. Ceci reprend le contenu du plugin "state" développé
précédemment.

Corrige également plusieurs problèmes dans le code du plugin state.

Change-Id: I095aff1ca6833a00d01485a383ae33689d7f247e
Refs: #1254.
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1483
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Thomas BURGUIERE <thomas.burguiere@c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/templates/vigiboard/plugins/state.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/state.html
@@ -7,7 +7,7 @@
         <a id="sortLink" title="${{
                 'asc': l_('Sort by %s in ascending order'),
                 'desc': l_('Sort by %s in descending order'),
-            }[next_order] % l_('Last occurrence').lower()}"
+            }[next_order] % l_('State').lower()}"
             href="${tg.url('/', params=fixed_search, sort=name, order=next_order, page=page.page)}">
             State
             <img src="${tg.url('/images/' + order + '.gif')}" py:if="sort == name"/>
