[#1292] Problème d'affichage du menu de VigiBoard
Suite au commit f6ccbc0334d97eda834ef21e947e3975febd9fb1, le menu de
VigiBoard ne s'affichait plus correctement.

Change-Id: I0f2b70899c177b3ceb3372cfc1a2de6594a49679
Refs: #1292.
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1504
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Thomas BURGUIERE <thomas.burguiere@c-s.fr>

--- a/src/vigilo/themes/templates/vigiboard/toolbar.html
+++ b/src/vigilo/themes/templates/vigiboard/toolbar.html
@@ -57,7 +57,8 @@
     </div>
     </py:with>
 
-    <py:with vars="lines = int(tg.session.get('items_per_page', tg.config['vigiboard_items_per_page']))">
+    <div class="header_item"
+        py:with="lines = int(tg.session.get('items_per_page', tg.config['vigiboard_items_per_page']))">
         Alerts per page
         <select id="lines_per_page" class="header_select"
             onchange="set_items_per_page($('lines_per_page').get('value'));">
@@ -66,7 +67,7 @@
             <option py:otherwise="" value="${possible_lines}">${possible_lines}</option>
             </py:for>
         </select>
-    </py:with>
+    </div>
 
     <div class="header_item">
         Theme
