[#1266] Historique navigateur et fragment.
Modifie le fonctionnement du chargement des cartes/graphes afin de se
baser sur les changements du fragment dans l'URL, tout en conservant les
fonctionnalités d'historique du navigateur. Ceci afin qu'un clic sur le
bouton Précédent/Suivant mette bien à jour l'état de l'application et
son contenu in fine.

Ce changement introduit le fichier "hashchange.js" qui permet d'ajouter
le support de l'événement "onhashchange" sur "document" pour tous les
navigateurs.

Pour le moment, seul !VigiMap est concerné, mais le même fonctionnement
sera mis en place pour !VigiGraph ultérieurement.

Change-Id: Ia3761524629e0d9697365f0bcfcc691b6be6af43
Refs: #1266.
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1690
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/jxlib.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/hashchange.js')}"></script>
     <script type="text/javascript">Jx.baseURL = '${tg.url("/js/lib")}';</script>
     <!--!
         "js/lib/babel.js" et "js/lib/babelThemes.js" doivent être chargés
