Rendu par défaut pour plugins VigiBoard.
Evite à un plugin VigiBoard qui n'ajoute pas de contenu de devoir
obligatoirement apporter un template HTML contenant des fonctions de
rendu qui ne renvoient aucun contenu.
Avant, si le plugin ne faisait pas ça, une erreur était générée (à cause
du template manquant).

Change-Id: I806dd7e234d48817e4a8785708f04f5a17fedbf0
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1549
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -36,7 +36,8 @@
 <body>
     <div style="display: none">
         <py:for each="(plugin_name, plugin_instance) in config['columns_plugins']">
-            <xi:include href="plugins/${plugin_name}.html" />
+            <xi:include href="plugins/${plugin_name}.html"><xi:fallback><xi:include
+                href="plugins/_default.html"/></xi:fallback></xi:include>
             ${plugin_template(plugin_name, plugin_instance)}
         </py:for>
     </div>
