--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -29,19 +29,13 @@
 </head>
 
 <body class="edit">
-    <div id="maplist">
-        <ul>
-        </ul>
-    </div>
-
     ${map()}
 
     <!--! L'apppel des deux fonctions suivantes (empty...) provoque l'injection dans la page html,
          des scripts javascript nécessaires à l'utilisation des toscawidgets dynforms dans une
          boîte de dialogue, elles n'ont en revanche aucune influence au niveau de l'apparence de
-         la page html-->
+         la page HTML. -->
     ${empty_dynform()}
     ${empty_calendar()}
-
 </body>
 </html>
