[#1280] Factorisation indicateurs dans VigiMap.
Permet d'afficher l'état des dépendances d'un HLS dans la popup de
détail de VigiMap. Ajoute une option en mode édition pour choisir si
toutes les dépendances doivent être affichées, seulement celles
présentant un état anormal ou alors si aucune dépendance ne doit
apparaître.

Change-Id: If2bff992ee59f4cd91290c72b96ac1319b923c8a
Refs: #1280
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1594
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Thomas BURGUIERE <thomas.burguiere@c-s.fr>

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -286,6 +286,10 @@ h1 a:hover {
     padding: 0.3em 0;
 }
 
+#details .jxDialogContent ul li.dependency {
+    padding: 0.3em 0.5em;
+}
+
 #details h2 {
     text-align: center;
     border-top: 1px solid black;
