Modifications de la légende de VigiMap
Apporte les modifications suivantes :
- [#1312] Déplace la légende de VigiMap vers la barre de menu (affichage
  permanent des compteurs)
- [#1319] Ajoute des liens dans la légende permettant d'accéder à une
  vue filtrée dans VigiBoard portant sur les éléments de la carte se
  trouvant dans l'état sélectionné.
- [#1283] Ajoute les icônes d'état dans la légende de VigiMap en plus du
  code couleur habituel.

Ce changement implémente également la sélection multiple d'état dans
VigiBoard et rend obsolète la nécessité de pouvoir déplacer la légende
de VigiMap (#1284).

Change-Id: I3ef71a3558f0b1cdafec8a9f2bc805e62a20850a
Refs: #1283,#1312,#1319,#1284
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1599
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Thomas BURGUIERE <thomas.burguiere@c-s.fr>

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -384,7 +384,7 @@ canvas {
     position: fixed;
     bottom: 0.5em;
     right: 0.5em;
-    width: 11em;
+    width: 12em;
     z-index: 99;
 }
 
@@ -423,16 +423,24 @@ canvas {
     font-size: 90%;
     padding: 0.2em 0;
 }
-#legend dl dt {
+
+#legend dl dt span {
     display: block;
     float: left;
-    width: 2em;
+    width: 1.5em;
     margin-right: 0.5em;
-    text-align: center;
+    height: 22px;
     clear: left;
 }
+
+#legend dl dt span + span {
+    height: auto;
+    text-align: center;
+    clear: none;
+    background-repeat: no-repeat;
+}
 #legend dl dd {
-    border: 1px solid transparent;
+    height: 24px;
 }
 
 #legend dl > dd > span {
