[#1409] Mise à jour couleurs de VigiMap/VigiBoard.
Légère modification des couleurs des états dans VigiMap pour améliorer
la lisibilité des messages des sondes dans la popup de détail, mais
aussi les compteurs dans la légende.

Application des mêmes codes dans VigiBoard.

Change-Id: I2b98b355189e61da82f6a533c6b7cba332791db3
Refs: #1409.
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1616
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Thomas BURGUIERE <thomas.burguiere@c-s.fr>

--- a/src/vigilo/themes/public/vigiboard/css/classical.css
+++ b/src/vigilo/themes/public/vigiboard/css/classical.css
@@ -40,12 +40,12 @@ td.UP {
 }
 
 td.WARNING {
-    background-color: #FFFF00;
+    background-color: #FF0;
 }
 
 td.CRITICAL,
 td.DOWN {
-    background-color: #FF0000;
+    background-color: #F88;
 }
 
 td.WARNING_Ack {
