--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -215,11 +215,11 @@ h1 a:hover {
 }
 .status-critical,
 .status-down {
-    background-color: #FF0000;
+    background-color: #F88;
     border: 1px solid #C80000;
 }
 .status-warning {
-    background-color: #FFFF00;
+    background-color: #FF0;
     border: 1px solid #C8C800;
 }
 .status-ok,
@@ -229,13 +229,13 @@ h1 a:hover {
 }
 .status-unknown,
 .status-unreachable {
-    background-color: #aaaaaa;
-    border: 1px solid #555555;
+    background-color: #DDD;
+    border: 1px solid #555;
 }
 
 .status-edit {
-    background-color: #FFFFFF;
-    border: 1px solid #555555;
+    background-color: #FFF;
+    border: 1px solid #555;
 }
 
 .status-icon {
