[#1278] Modification du bouton "home" des IHMs.
Retire le logo Vigilo avec un lien configurable des IHMs.

A la place, il est remplacé par l'ancien bouton "home" / "maison" tout
en conservant la possibilité de configurer le lien associé.

L'option "logo_link" est renommée en "home_link" pour tenir compte de
cette modification.

Change-Id: If49f5bfb9258d571a5e0a746c5eb68a54584f968
Refs: #1278.
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1701
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Thomas BURGUIERE <thomas.burguiere@c-s.fr>

--- a/src/vigilo/themes/templates/vigigraph/main_simplified.html
+++ b/src/vigilo/themes/templates/vigigraph/main_simplified.html
@@ -24,9 +24,9 @@
         si vous changez l'en-tête.
     -->
     <div id="header">
-        <span id="logo">
-            <a href="${tg.url(tg.config.get('logo_link', '/'))}">
-                <img alt="${''}" src="${tg.url('/images/vigilo.png')}"/>
+        <span id="home">
+            <a href="${tg.url(tg.config.get('home_link', '/'))}">
+                <img alt="${''}" src="${tg.url('/images/home.png')}"/>
             </a>
         </span>
 
