--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -10,9 +10,9 @@
     text-decoration: none;
 }
 
-#logo {
-    /*margin: 0 0.2em;*/
-    margin: 0.3em 0.2em;
+#home {
+    margin: 0.1em 0;
+    margin-right: 0.3em;
     float: left;
 }
 
