--- a/src/vigilo/themes/templates/vigiboard/toolbar.html
+++ b/src/vigilo/themes/templates/vigiboard/toolbar.html
@@ -5,9 +5,9 @@
 
 <py:def function="toolbar">
 <div id="header">
-    <span id="logo">
-        <a href="${tg.url(tg.config.get('logo_link', '/'))}">
-            <img alt="${''}" src="${tg.url('/images/vigilo.png')}"/>
+    <span id="home">
+        <a href="${tg.url(tg.config.get('home_link', '/'))}">
+            <img alt="${''}" src="${tg.url('/images/home.png')}"/>
         </a>
     </span>
 
@@ -17,9 +17,6 @@
         </a>
         <a href="${tg.url('/silence/')}">
             <img src="${tg.url('/images/silence.png')}" alt="Silence rules" title="Silence rules" />
-        </a>
-        <a href="${tg.url('/')}">
-            <img src="${tg.url('/images/home.png')}" alt="Home" title="Home" />
         </a>
         <a id="SearchLien" href="javascript:window.search_dialog.open.bind(window.search_dialog)();">
             <img src="${tg.url('/images/search.png')}" alt="Filter display" title="Filter display"/>
