--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -64,9 +64,9 @@
 <body py:match="body" py:attrs="select('@*')">
 
     <div id="header">
-        <span id="logo">
-            <a href="${tg.url(tg.config.get('logo_link', '/'))}">
-                <img alt="${''}" src="${tg.url('/images/vigilo.png')}"/>
+        <span id="home">
+            <a href="${tg.url(tg.config.get('home_link', '/'))}">
+                <img alt="${''}" src="${tg.url('/images/home.png')}"/>
             </a>
         </span>
 
